--- a/Northwind/Northwind/Views/ProductCell.xib
+++ b/Northwind/Northwind/Views/ProductCell.xib
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -25,29 +24,44 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="100.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="300" text="productName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="unL-H9-Pof">
-                        <rect key="frame" x="16" y="11" width="109" height="23.5"/>
-                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wv-P1-JUS">
-                        <rect key="frame" x="16" y="42.5" width="39.5" height="42.5"/>
-                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7ad-Dg-ihX">
+                        <rect key="frame" x="8" y="8" width="304" height="84.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="300" text="productName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="unL-H9-Pof">
+                                <rect key="frame" x="8" y="8" width="109" height="23.5"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wv-P1-JUS">
+                                <rect key="frame" x="8" y="39.5" width="39.5" height="37"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="4wv-P1-JUS" firstAttribute="leading" secondItem="7ad-Dg-ihX" secondAttribute="leading" constant="8" id="4Vn-vF-HJE"/>
+                            <constraint firstItem="unL-H9-Pof" firstAttribute="top" secondItem="7ad-Dg-ihX" secondAttribute="top" constant="8" id="LYV-vG-lMK"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="4wv-P1-JUS" secondAttribute="trailing" constant="8" id="Qwz-J2-IMI"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="unL-H9-Pof" secondAttribute="trailing" constant="8" id="bjx-ih-yhX"/>
+                            <constraint firstAttribute="bottom" secondItem="4wv-P1-JUS" secondAttribute="bottom" constant="8" id="dYb-GB-vCj"/>
+                            <constraint firstItem="4wv-P1-JUS" firstAttribute="top" secondItem="unL-H9-Pof" secondAttribute="bottom" constant="8" id="kPc-4z-4Hl"/>
+                            <constraint firstItem="unL-H9-Pof" firstAttribute="leading" secondItem="7ad-Dg-ihX" secondAttribute="leading" constant="8" id="ldx-Ln-xqG"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="unL-H9-Pof" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="2WQ-ZV-whp"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="4wv-P1-JUS" secondAttribute="bottom" constant="5" id="ItW-g3-GEu"/>
-                    <constraint firstItem="4wv-P1-JUS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="P27-ew-6Mr"/>
-                    <constraint firstItem="unL-H9-Pof" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Ygr-nS-edh"/>
-                    <constraint firstItem="4wv-P1-JUS" firstAttribute="top" secondItem="unL-H9-Pof" secondAttribute="bottom" constant="8" id="ibh-WH-02o"/>
+                    <constraint firstAttribute="trailing" secondItem="7ad-Dg-ihX" secondAttribute="trailing" constant="8" id="9JB-V7-J7P"/>
+                    <constraint firstItem="7ad-Dg-ihX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="HWT-KZ-wO3"/>
+                    <constraint firstAttribute="bottom" secondItem="7ad-Dg-ihX" secondAttribute="bottom" constant="8" id="gBw-Ko-okK"/>
+                    <constraint firstItem="7ad-Dg-ihX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="sWV-Py-l6G"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="cardView" destination="7ad-Dg-ihX" id="CyV-vx-keV"/>
                 <outlet property="descLabel" destination="4wv-P1-JUS" id="irO-YV-HZB"/>
                 <outlet property="nameLabel" destination="unL-H9-Pof" id="n54-14-Mzs"/>
             </connections>
